refacroring link-block in widget-news

--- a/app/index.html
+++ b/app/index.html
@@ -127,8 +127,8 @@
                         <div class="col-8 col-md-8">
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
-                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -148,8 +148,8 @@
                         <div class="col-8 col-md-8">
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
-                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -169,8 +169,8 @@
                         <div class="col-8 col-md-8">
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
-                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -190,8 +190,8 @@
                         <div class="col-8 col-md-8">
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
-                            <div class="cart-description mb-1">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
+                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
