--- a/app/index.html
+++ b/app/index.html
@@ -74,7 +74,8 @@
                     <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
+                    </div>
+                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -84,7 +85,8 @@
                     <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
+                    </div>
+                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -94,7 +96,8 @@
                     <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
+                    </div>
+                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -104,7 +107,8 @@
                     <div class="cart-description">
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-                    </div><a class="cart-link pl-2 py-1" href="#">Continue Reading »</a>
+                    </div>
+                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
               </div>
@@ -128,7 +132,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -149,7 +153,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -170,7 +174,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -191,7 +195,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="link-block ml-auto"><a class="cart-link d-block pl-2 py-1 mr-0" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
