new refactoring link-block in widget-news

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div>
-                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                    <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -86,7 +86,7 @@
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div>
-                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                    <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -97,7 +97,7 @@
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div>
-                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                    <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
                 <div class="col-md-12 col-lg-6">
@@ -108,7 +108,7 @@
                       <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa.</p>
                       <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
                     </div>
-                    <div class="cart-link"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                    <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
               </div>
@@ -132,7 +132,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -153,7 +153,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -174,7 +174,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
@@ -195,7 +195,7 @@
                           <div class="widget-item ml-1">
                             <h2 class="content-title mb-0">Indonectetus facilis leo nibh </h2>
                             <div class="cart-description mb-0">Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</div>
-                            <div class="cart-link ml-auto"><a class="pl-2 py-1" href="#">Continue Reading »</a></div>
+                            <div class="cart-link ml-auto"><a class="pl-2" href="#">Continue Reading »</a></div>
                           </div>
                         </div>
                       </div>
