--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
       </nav>
     </div>
     <div class="container-xl">
-      <div class="hero"> gregte</div>
+      <div class="hero"> gregte Рефакторинг 17:19 31 автуста</div>
       <div class="content pt-3 mt-2">
         <div class="row">
           <div class="col-md-7 col-lg-8">
