--- a/app/index.html
+++ b/app/index.html
@@ -60,14 +60,33 @@
         </div>
       </nav>
     </div>
-    <div class="container-xl">
-      <div class="hero"> gregte Рефакторинг 17:57 31 автуста</div>
-      <div class="content pt-3 mt-2">
+    <div class="wrapper-slider">
+      <div class="slider slider-for mx-auto">
+        <div><img class="img-fluid" src="img/960of270px.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
+        <div><img class="img-fluid" src="img/960of270green.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
+        <div><img class="img-fluid" src="img/960of270red.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
+        <div><img class="img-fluid" src="img/960of270yellow.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
+      </div>
+      <div class="slider slider-nav mx-auto">
+        <div class="item"><img class="img-fluid" src="img/225of80px.png" alt=""/>
+          <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
+        </div>
+        <div class="item"><img class="img-fluid" src="img/225of80green.png" alt=""/>
+          <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
+        </div>
+        <div class="item"><img class="img-fluid" src="img/225of80red.png" alt=""/>
+          <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
+        </div>
+        <div class="item"><img class="img-fluid" src="img/225of80yellow.png" alt=""/>
+          <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
+        </div>
+      </div>
+      <div class="container-xl content pt-3 mt-2">
         <div class="row">
-          <div class="col-md-7 col-lg-8">
+          <div class="col-md-12 col-lg-8">
             <main class="main-content">
               <div class="row">
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                   <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
@@ -78,7 +97,7 @@
                     <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                   <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
@@ -89,7 +108,7 @@
                     <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                   <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
@@ -100,7 +119,7 @@
                     <div class="cart-link"><a class="pl-2" href="#">Continue Reading »</a></div>
                   </article>
                 </div>
-                <div class="col-md-12 col-lg-6">
+                <div class="col-md-6">
                   <article class="cart mb-4 pb-1 mx-auto">
                     <h2 class="content-title">Indonectetus facilis leo nibh</h2>
                     <div class="divider"></div><img class="cart-img img-fluid img-fluid mt-2 mb-3" src="img/300of150px.png" alt="#"/>
@@ -114,7 +133,7 @@
               </div>
             </main>
           </div>
-          <div class="col-md-5 col-lg-4">
+          <div class="col-md-12 col-lg-4">
             <aside class="mb-4 pb-1">
               <div class="widget-wrapper">
                 <div class="row">
@@ -311,6 +330,7 @@
     </div>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
