--- a/app/index.html
+++ b/app/index.html
@@ -11,28 +11,13 @@
   </head>
   <body>
     <div class="container-xl">
-      <header class="header pt-sm-4 pb-sm-4">
-        <div class="main-header pt-sm-2 pb-sm-2">
-          <div class="row">
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <div class="header-info">
-                <h1 class="header-title">Universal College</h1>
-                <div class="description">Free PSD Website Template</div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-6 col-lg-6">
-              <address class="mt-2 mb-0 mr-lg-4">
-                <div class="header-address mb-sm-3">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
-              </address>
-            </div>
-          </div>
-        </div>
-        <div class="spoiler-header mt-2">
+      <header class="header mt-2 pt-sm-4">
+        <div class="spoiler-header main-header">
           <h1 class="header-title">Universal College</h1>
-          <div class="header-text">
-            <div class="description mb-2">Free PSD Website Template</div>
-            <address class="mb-2">
-              <div class="header-address">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
+          <div class="header-contact">
+            <div class="description">Free PSD Website Template</div>
+            <address class="mt-2 mb-0 mr-lg-4">
+              <div class="header-address mb-sm-3">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
             </address>
           </div>
         </div>
@@ -61,27 +46,43 @@
       </nav>
     </div>
     <div class="wrapper-slider">
-      <div class="slider slider-for mx-auto">
-        <div><img class="img-fluid" src="img/960of270px.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
-        <div><img class="img-fluid" src="img/960of270green.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
-        <div><img class="img-fluid" src="img/960of270red.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
-        <div><img class="img-fluid" src="img/960of270yellow.png" alt=""/><a href="#">» Link Text Goes Here</a></div>
+      <div class="slider slider-for mx-auto mb-3">
+        <div><img class="img-fluid" data-lazy="img/960of270px.png" alt=""/>
+          <div>
+            <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
+          </div>
+        </div>
+        <div><img class="img-fluid" data-lazy="img/960of270green.png" alt=""/>
+          <div>
+            <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
+          </div>
+        </div>
+        <div><img class="img-fluid" data-lazy="img/960of270red.png" alt=""/>
+          <div>
+            <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
+          </div>
+        </div>
+        <div><img class="img-fluid" data-lazy="img/960of270yellow.png" alt=""/>
+          <div>
+            <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
+          </div>
+        </div>
       </div>
       <div class="slider slider-nav mx-auto">
-        <div class="item"><img class="img-fluid" src="img/225of80px.png" alt=""/>
+        <div class="item mt-1"><img class="img-fluid" src="img/225of80px.png" alt=""/>
           <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
         </div>
-        <div class="item"><img class="img-fluid" src="img/225of80green.png" alt=""/>
+        <div class="item mt-1"><img class="img-fluid" src="img/225of80green.png" alt=""/>
           <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
         </div>
-        <div class="item"><img class="img-fluid" src="img/225of80red.png" alt=""/>
+        <div class="item mt-1"><img class="img-fluid" src="img/225of80red.png" alt=""/>
           <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
         </div>
-        <div class="item"><img class="img-fluid" src="img/225of80yellow.png" alt=""/>
+        <div class="item mt-1"><img class="img-fluid" src="img/225of80yellow.png" alt=""/>
           <div class="slider-link"><a href="#">» Link Text Goes Here</a></div>
         </div>
       </div>
-      <div class="container-xl content pt-3 mt-2">
+      <div class="container-xl content pt-3 mt-3">
         <div class="row">
           <div class="col-md-12 col-lg-8">
             <main class="main-content">
