--- a/app/index.html
+++ b/app/index.html
@@ -47,22 +47,22 @@
     </div>
     <div class="wrapper-slider">
       <div class="slider slider-for mx-auto mb-3">
-        <div><img class="img-fluid" data-lazy="img/960of270px.png" alt=""/>
+        <div><img class="img-fluid" src="#" data-lazy="img/960of270px.png" alt=""/>
           <div>
             <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
           </div>
         </div>
-        <div><img class="img-fluid" data-lazy="img/960of270green.png" alt=""/>
+        <div><img class="img-fluid" src="#" data-lazy="img/960of270green.png" alt=""/>
           <div>
             <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
           </div>
         </div>
-        <div><img class="img-fluid" data-lazy="img/960of270red.png" alt=""/>
+        <div><img class="img-fluid" src="#" data-lazy="img/960of270red.png" alt=""/>
           <div>
             <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
           </div>
         </div>
-        <div><img class="img-fluid" data-lazy="img/960of270yellow.png" alt=""/>
+        <div><img class="img-fluid" src="#" data-lazy="img/960of270yellow.png" alt=""/>
           <div>
             <div class="slider-link">Cursus penati saccum ut curabitur nulla.</div>
           </div>
