--- a/app/index.html
+++ b/app/index.html
@@ -12,14 +12,12 @@
   <body>
     <div class="container-xl">
       <header class="header mt-2 pt-sm-4">
-        <div class="spoiler-header main-header">
-          <h1 class="header-title">Universal College</h1>
-          <div class="header-contact">
-            <div class="description">Free PSD Website Template</div>
-            <address class="mt-2 mb-0 mr-lg-4">
-              <div class="header-address mb-sm-3">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
-            </address>
-          </div>
+        <h1 class="header-title">Universal College</h1>
+        <div class="spoiler-header header-wrapper pb-1 pb-sm">
+          <div class="description">Free PSD Website Template</div>
+          <address class="mt-2 mb-0 mr-lg-4">
+            <div class="header-address mb-sm-3">Libero | Maecenas | Mauris | Suspendisse<br></div><a class="header-contact" href="tel:+0000000000">Tel: xxxxx xxxxxxxxxx | </a><a class="header-contact" href="mailto:info@domain.com">Mail: info@domain.com</a>
+          </address>
         </div>
       </header>
     </div>
